-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
ad6a85867 (dev), 589b75cbd (6.8)
Currently default series theme is UserDefined or QtGreen depending how it is used.
1) If GraphsView doesn't set GraphsTheme, default one is created and resetColorTheme() is called (which sets QtGreen).
2) If GraphsView contains "theme: GraphsTheme {}", theme will be UserDefined and all series will be black.
Wouldn't QtGreen be a good default value in both ways? Does UserDefined have some usage, why does it add black into m_seriesThemeColors?
For Gerrit Dashboard: QTBUG-125470 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
574481,2 | Change the default theme to QtGreen | dev | qt/qtgraphs | Status: MERGED | +2 | +1 |
575125,2 | Change the default theme to QtGreen | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |