Change the default theme to QtGreen

Fixes: QTBUG-125470
Pick-to: 6.8
Change-Id: I817419c25adb48805a5376f98419c5a0165ea9d5
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>