tests/auto/cpptest/qgbars/tst_bars.cpp
@@ -102,7 +102,7 @@ void tst_bars::initialProperties()
     QCOMPARE(m_graph->rowAxis()->orientation(), QAbstract3DAxis::AxisOrientation::Z);
 
     // Common properties
-    QCOMPARE(m_graph->activeTheme()->theme(), QGraphsTheme::Theme::UserDefined);
+    QCOMPARE(m_graph->activeTheme()->theme(), QGraphsTheme::Theme::QtGreen);
     QCOMPARE(m_graph->selectionMode(), QtGraphs3D::SelectionFlag::Item);
     QCOMPARE(m_graph->shadowQuality(), QtGraphs3D::ShadowQuality::Medium);
     QVERIFY(m_graph->scene());
